--- a/Nsure-api/Nsure-api/Properties/launchSettings.json
+++ b/Nsure-api/Nsure-api/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5584",
-      "sslPort": 44302
+      "applicationUrl": "http://localhost:14158",
+      "sslPort": 44328
     }
   },
   "profiles": {
-    "Nsure.api": {
+    "Nsure_api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7204;http://localhost:5298",
+      "applicationUrl": "https://localhost:7223;http://localhost:5221",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
